Correção do caminho das imagens/2

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>MEGASTORE | E-COMMERCE</title>
-  <link rel="stylesheet" href="./css/style.css" />
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body>
@@ -73,9 +73,9 @@
         <h3 class="section-title">Produtos Selecionados</h3>
         <div class="subtitle-underline"></div>
         <div class="cols cols-4" id="product-list">
-           
+
         </div>
-    </div>
+      </div>
       <div class="page-inner-content">
         <h3 class="section-title">Produtos Selecionado</h3>
         <div class="subtitle-underline"></div>
@@ -228,7 +228,7 @@
           </div>
 
         </div>
-      </div> 
+      </div>
     </div>
     <div class="gray-background">
       <div class="header-inner-content">
@@ -328,7 +328,7 @@
       <p> Copyright 2024 - Geison Nunes - Todos os direitos Reservados</p>
     </div>
   </footer>
-  <script src="/js/script.js"></script>
+  <script src="js/script.js"></script>
 </body>
 
 </html>
