--- a/Login.html
+++ b/Login.html
@@ -1,110 +1,80 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Login</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://unicons.iconscout.com/release/v2.1.9/css/unicons.css"
-    />
-    <link rel="stylesheet" href="/css/Login.css" />
-  </head>
-  <body>
-    <div class="section">
-      <div class="container">
-        <div class="row full-height justify-content-center">
-          <div class="col-12 text-center align-self-center py-5">
-            <div class="section pb-5 pt-5 pt-sm-2 text-center">
-              <h6 class="mb-0 pb-3">
-                <span>Iniciar sessão</span><span>Criar Conta</span>
-              </h6>
-              <input
-                class="checkbox"
-                type="checkbox"
-                id="reg-log"
-                name="reg-log"
-              />
-              <label for="reg-log"></label>
-              <div class="card-3d-wrap mx-auto">
-                <div class="card-3d-wrapper">
-                  <div class="card-front" id="login-form">
-                    <div class="center-wrap">
-                      <div class="section text-center">
-                        <h4 class="mb-4 pb-3">Iniciar sessão</h4>
-                        <div class="form-group">
-                          <input
-                            type="email"
-                            name="logemail"
-                            class="form-style"
-                            placeholder="Seu Email"
-                            id="logemail"
-                            autocomplete="off"
-                          />
-                          <i class="input-icon uil uil-at"></i>
-                        </div>
-                        <div class="form-group mt-2">
-                          <input
-                            type="password"
-                            name="logpass"
-                            class="form-style"
-                            placeholder="Sua Senha"
-                            id="logpass"
-                            autocomplete="off"
-                          />
-                          <i class="input-icon uil uil-lock-alt"></i>
-                        </div>
-                        <button class="btn mt-4" id="login-btn">Enviar</button>
-                        <p class="mb-0 mt-4 text-center">
-                          <a href="#0" class="link">Esqueceu sua senha?</a>
-                        </p>
+
+<head>
+  <meta charset="UTF-8" />
+  <title>Login</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="https://unicons.iconscout.com/release/v2.1.9/css/unicons.css" />
+  <link rel="stylesheet" href="css/Login.css" />
+</head>
+
+<body>
+  <div class="section">
+    <div class="container">
+      <div class="row full-height justify-content-center">
+        <div class="col-12 text-center align-self-center py-5">
+          <div class="section pb-5 pt-5 pt-sm-2 text-center">
+            <h6 class="mb-0 pb-3">
+              <span>Iniciar sessão</span><span>Criar Conta</span>
+            </h6>
+            <input class="checkbox" type="checkbox" id="reg-log" name="reg-log" />
+            <label for="reg-log"></label>
+            <div class="card-3d-wrap mx-auto">
+              <div class="card-3d-wrapper">
+                <div class="card-front" id="login-form">
+                  <div class="center-wrap">
+                    <div class="section text-center">
+                      <h4 class="mb-4 pb-3">
+                        Iniciar
+                        sessão
+                      </h4>
+                      <div class="form-group">
+                        <input type="email" name="logemail" class="form-style" placeholder="Seu Email" id="logemail"
+                          autocomplete="off" />
+                        <i class="input-icon uil uil-at"></i>
                       </div>
+                      <div class="form-group mt-2">
+                        <input type="password" name="logpass" class="form-style" placeholder="Sua Senha" id="logpass"
+                          autocomplete="off" />
+                        <i class="input-icon uil uil-lock-alt"></i>
+                      </div>
+                      <button class="btn mt-4" id="login-btn">
+                        Enviar
+                      </button>
+                      <p class="mb-0 mt-4 text-center">
+                        <a href="#0" class="link">Esqueceu
+                          sua
+                          senha?</a>
+                      </p>
                     </div>
                   </div>
-                  <div class="card-back" id="register-form">
-                    <div class="center-wrap">
-                      <div class="section text-center">
-                        <h4 class="mb-4 pb-3">Criar Conta</h4>
-                        <div class="form-group">
-                          <input
-                            type="text"
-                            name="regname"
-                            class="form-style"
-                            placeholder="Seu Nome Completo"
-                            id="regname"
-                            autocomplete="off"
-                          />
-                          <i class="input-icon uil uil-user"></i>
-                        </div>
-                        <div class="form-group mt-2">
-                          <input
-                            type="email"
-                            name="regemail"
-                            class="form-style"
-                            placeholder="Seu Email"
-                            id="regemail"
-                            autocomplete="off"
-                          />
-                          <i class="input-icon uil uil-at"></i>
-                        </div>
-                        <div class="form-group mt-2">
-                          <input
-                            type="password"
-                            name="regpass"
-                            class="form-style"
-                            placeholder="Sua Senha"
-                            id="regpass"
-                            autocomplete="off"
-                          />
-                          <i class="input-icon uil uil-lock-alt"></i>
-                        </div>
-                        <button class="btn mt-4" id="register-btn">
-                          Registrar
-                        </button>
+                </div>
+                <div class="card-back" id="register-form">
+                  <div class="center-wrap">
+                    <div class="section text-center">
+                      <h4 class="mb-4 pb-3">
+                        Criar
+                        Conta
+                      </h4>
+                      <div class="form-group">
+                        <input type="text" name="regname" class="form-style" placeholder="Seu Nome Completo"
+                          id="regname" autocomplete="off" />
+                        <i class="input-icon uil uil-user"></i>
                       </div>
+                      <div class="form-group mt-2">
+                        <input type="email" name="regemail" class="form-style" placeholder="Seu Email" id="regemail"
+                          autocomplete="off" />
+                        <i class="input-icon uil uil-at"></i>
+                      </div>
+                      <div class="form-group mt-2">
+                        <input type="password" name="regpass" class="form-style" placeholder="Sua Senha" id="regpass"
+                          autocomplete="off" />
+                        <i class="input-icon uil uil-lock-alt"></i>
+                      </div>
+                      <button class="btn mt-4" id="register-btn">
+                        Registrar
+                      </button>
                     </div>
                   </div>
                 </div>
@@ -114,7 +84,9 @@
         </div>
       </div>
     </div>
+  </div>
 
-    <script src="/js/Login.js"></script>
-  </body>
+  <script src="js/Login.js"></script>
+</body>
+
 </html>
