--- a/Login.html
+++ b/Login.html
@@ -6,7 +6,7 @@
   <title>Login</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" />
   <link rel="stylesheet" href="https://unicons.iconscout.com/release/v2.1.9/css/unicons.css" />
-  <link rel="stylesheet" href="css/Login.css" />
+  <link rel="stylesheet" href="./css/Login.css" />
 </head>
 
 <body>
@@ -86,7 +86,7 @@
     </div>
   </div>
 
-  <script src="js/Login.js"></script>
+  <script src="./js/Login.js"></script>
 </body>
 
 </html>
