--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <button>Ver Agora &#8594;</button>
         </div>
         <div class="header-bottom-side-right">
-          <img src="img/gaming-msi-header.png" alt="Gaming MSI" />
+          <img src="./img/gaming-msi-header.png" alt="Gaming MSI" />
         </div>
       </div>
     </div>
@@ -61,9 +61,9 @@
     <div class="gray-background">
       <div class="page-inner-content">
         <div class="cols cols-3">
-          <img src="img/product-1.png" alt="" />
-          <img src="img/product-2.png" alt="" />
-          <img src="img/product-3.png" alt="" />
+          <img src="./img/product-1.png" alt="" />
+          <img src="./img/product-2.png" alt="" />
+          <img src="./img/product-3.png" alt="" />
         </div>
       </div>
     </div>
@@ -82,7 +82,7 @@
         <div class="cols cols-4">
 
           <div class="product">
-            <img src="img/product-4.png" alt="" class="product-image">
+            <img src="./img/product-4.png" alt="" class="product-image">
             <p class="product-name">Combo Gamer</p>
             <p class="rate">&#9733;&#9733;&#9733;&#9733;&#9734;</p>
             <p class="product-price">R$ 1.200,00</p>
