Correção do caminhos das imagens

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           </div>
 
           <div class="product">
-            <img src="img/product-5.png" alt="" class="product-name">
+            <img src="./img/product-5.png" alt="" class="product-name">
             <p class="product-name">Placa De Vídeo Msi Geforce 1650</p>
             <p class="rate">&#9733;&#9733;&#9733;&#9733;&#9734;</p>
             <p class="product-price">R$ 879,90</p>
@@ -99,7 +99,7 @@
           </div>
 
           <div class="product">
-            <img src="img/product-6.png" alt="" class="product-name">
+            <img src="./img/product-6.png" alt="" class="product-name">
             <p class="product-name"></p> Dualsense Para Ps5</p>
             <p class="rate">&#9733;&#9733;&#9733;&#9733;&#9734;</p>
             <p class="product-price">R$ 388,79</p>
@@ -108,7 +108,7 @@
           </div>
 
           <div class="product">
-            <img src="img/product-7.png" alt="" class="product-name">
+            <img src="./img/product-7.png" alt="" class="product-name">
             <p class="product-name">Cadeira Gamer</p>
             <p class="rate">&#9733;&#9733;&#9733;&#9733;&#9734;</p>
             <p class="product-price">R$ 899,90</p>
@@ -122,7 +122,7 @@
           <div class="cols cols-4">
 
             <div class="product">
-              <img src="img/product-8.png" alt="" class="product-name">
+              <img src="./img/product-8.png" alt="" class="product-name">
               <p class="product-name">Combo Gamer</p>
               <p class="rate">&#9733;&#9733;&#9733;&#9733;&#9734;</p>
               <p class="product-price">R$ 899,90</p>
@@ -130,7 +130,7 @@
             </div>
 
             <div class="product">
-              <img src="img/product-5.png" alt="" class="product-name">
+              <img src="./img/product-5.png" alt="" class="product-name">
               <p class="product-name">Placa De Vídeo Msi Geforce 1650</p>
               <p class="rate">&#9733;&#9733;&#9733;&#9733;&#9734;</p>
               <p class="product-price">R$ 879,90</p>
@@ -139,7 +139,7 @@
             </div>
 
             <div class="product">
-              <img src="img/product-6.png" alt="" class="product-name">
+              <img src="./img/product-6.png" alt="" class="product-name">
               <p class="product-name"></p> Dualsense Para Ps5</p>
               <p class="rate">&#9733;&#9733;&#9733;&#9733;&#9734;</p>
               <p class="product-price">R$ 388,79</p>
@@ -148,7 +148,7 @@
             </div>
 
             <div class="product">
-              <img src="img/product-7.png" alt="" class="product-name">
+              <img src="./img/product-7.png" alt="" class="product-name">
               <p class="product-name">Cadeira Gamer</p>
               <p class="rate">&#9733;&#9733;&#9733;&#9733;&#9734;</p>
               <p class="product-price">R$ 899,90</p>
@@ -156,7 +156,7 @@
             </div>
 
             <div class="product">
-              <img src="img/product-8.png" alt="" class="product-name">
+              <img src="./img/product-8.png" alt="" class="product-name">
               <p class="product-name"></p> IPhone 14 Pro Max</p>
               <p class="rate">&#9733;&#9733;&#9733;&#9733;&#9734;</p>
               <p class="product-price">R$ 10.299,00</p>
@@ -166,7 +166,7 @@
             </div>
 
             <div class="product">
-              <img src="img/product-9.png" alt="" class="product-name">
+              <img src="./img/product-9.png" alt="" class="product-name">
               <p class="product-name">Galaxy S23 Ultra</p>
               <p class="rate">&#9733;&#9733;&#9733;&#9733;&#9734;</p>
               <p class="product-price">R$ 4.859,10</p>
@@ -176,7 +176,7 @@
             </div>
 
             <div class="product">
-              <img src="img/product-10.png" alt="" class="product-name">
+              <img src="./img/product-10.png" alt="" class="product-name">
               <p class="product-name">ASUS ROG Phone II</p>
               <p class="rate">&#9733;&#9733;&#9733;&#9733;&#9734;</p>
               <p class="product-price">R$ 8.549,10</p>
@@ -185,7 +185,7 @@
             </div>
 
             <div class="product">
-              <img src="img/product-11.png" alt="" class="product-name">
+              <img src="./img/product-11.png" alt="" class="product-name">
               <p class="product-name"></p> 12S Ultra</p>
               <p class="rate">&#9733;&#9733;&#9733;&#9733;&#9734;</p>
               <p class="product-price">R$ 7.866,72</p>
@@ -193,7 +193,7 @@
             </div>
 
             <div class="product">
-              <img src="img/product-12.png" alt="" class="product-name">
+              <img src="./img/product-12.png" alt="" class="product-name">
               <p class="product-name"></p> Series X 1TB</p>
               <p class="rate">&#9733;&#9733;&#9733;&#9733;&#9734;</p>
               <p class="product-price">R$ 3.860,00</p>
@@ -201,7 +201,7 @@
             </div>
 
             <div class="product">
-              <img src="img/product-13.png" alt="" class="product-name">
+              <img src="./img/product-13.png" alt="" class="product-name">
               <p class="product-name"></p> T80 Ferrari 488 GTB </p>
               <p class="rate">&#9733;&#9733;&#9733;&#9733;&#9734;</p>
               <p class="product-price">R$ 1.806,89</p>
@@ -210,7 +210,7 @@
             </div>
 
             <div class="product">
-              <img src="img/product-14.png" alt="" class="product-name">
+              <img src="./img/product-14.png" alt="" class="product-name">
               <p class="product-name"> PlayStation 5</p>
               <p class="rate">&#9733;&#9733;&#9733;&#9733;&#9734;</p>
               <p class="product-price">R$ 3.559,90</p>
@@ -218,7 +218,7 @@
             </div>
 
             <div class="product">
-              <img src="img/product-15.png" alt="" class="product-name">
+              <img src="./img/product-15.png" alt="" class="product-name">
               <p class="product-name">Gabinete Gamer</p>
               <p class="rate">&#9733;&#9733;&#9733;&#9733;&#9734;</p>
               <p class="product-price">R$ 1.000,00</p>
@@ -242,7 +242,7 @@
             <button>Ver Agora &#8594;</button>
           </div>
           <div class="header-bottom-side-right">
-            <img src="img/exclusive.png">
+            <img src="./img/exclusive.png">
           </div>
         </div>
       </div>
@@ -299,8 +299,8 @@
         <p>Baixe nosso Aplicativo</p>
         <p>Baixe nosso Aplicativo para Android e IOS</p>
         <div>
-          <img src="img/app-store.png" alt="">
-          <img src="img/play-store.png" alt="">
+          <img src="./img/app-store.png" alt="">
+          <img src="./img/play-store.png" alt="">
         </div>
       </div>
 
