Corrigindo caminho de imagens

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <div class="cols cols-4">
 
           <div class="product">
-            <img src="img/product-4.png" alt="" class="product-image">
+            <img src="./img/product-4.png" alt="" class="product-image">
             <p class="product-name">Combo Gamer</p>
             <p class="rate">&#9733;&#9733;&#9733;&#9733;&#9734;</p>
             <p class="product-price">R$ 1.200,00</p>
@@ -90,7 +90,7 @@
           </div>
 
           <div class="product">
-            <img src="img/product-5.png" alt="" class="product-name">
+            <img src="./img/product-5.png" alt="" class="product-name">
             <p class="product-name">Placa De Vídeo Msi Geforce 1650</p>
             <p class="rate">&#9733;&#9733;&#9733;&#9733;&#9734;</p>
             <p class="product-price">R$ 879,90</p>
@@ -99,7 +99,7 @@
           </div>
 
           <div class="product">
-            <img src="img/product-6.png" alt="" class="product-name">
+            <img src="./img/product-6.png" alt="" class="product-name">
             <p class="product-name"></p> Dualsense Para Ps5</p>
             <p class="rate">&#9733;&#9733;&#9733;&#9733;&#9734;</p>
             <p class="product-price">R$ 388,79</p>
@@ -108,7 +108,7 @@
           </div>
 
           <div class="product">
-            <img src="img/product-7.png" alt="" class="product-name">
+            <img src="./img/product-7.png" alt="" class="product-name">
             <p class="product-name">Cadeira Gamer</p>
             <p class="rate">&#9733;&#9733;&#9733;&#9733;&#9734;</p>
             <p class="product-price">R$ 899,90</p>
