Corrigindo um erro

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             </div>
 
             <div class="product">
-              <img src=img/product-6.png" alt="" class="product-name">
+              <img src="img/product-6.png" alt="" class="product-name">
               <p class="product-name"></p> Dualsense Para Ps5</p>
               <p class="rate">&#9733;&#9733;&#9733;&#9733;&#9734;</p>
               <p class="product-price">R$ 388,79</p>
